[project]
name = "carta"
version = "0.1.0"
description = "CARTA — Customer Agent for Reordering, Trading & Automation (Munder Difflin Paper Co.)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "pydantic-ai[openai]>=1.87.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
